tests/snapshots/regression_families__fit_truncated_gaussian.snap
---
source: tests/regression_families.rs
expression: "fit_and_snapshot(&family, &y, &x)"
---
converged: true
coefficients:
  mu:
    - "1.0317e0"
    - "1.9392e0"
  sigma:
    - "-1.6359e0"
edf:
  mu: "2.0000e0"
  sigma: "1.0000e0"
log_likelihood: "1.3015e1"
aic: "-2.0030e1"
